force-app/main/default/objects/Transaction_Log__c/Transaction_Log__c.object-meta.xml
<CustomObject>
    <description>Transaction Logs associated with an account</description>
    <label>Transaction Log</label>
    <nameField>
        <label>Transaction Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>