force-app/main/default/objects/Transaction_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Transaction Logs for an account</description>
    <inlineHelpText>Transaction Logs for an account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transaction Logs</relationshipLabel>
    <relationshipName>Transaction_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>