force-app/main/default/objects/Transaction_Log__c/fields/Counterparty_Email__c.field-meta.xml
<CustomField>
    <fullName>Counterparty_Email__c</fullName>
    <description>Counterparty Email</description>
    <inlineHelpText>Counterparty Email</inlineHelpText>
    <label>Counterparty Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>