force-app/main/default/objects/Transaction_Log__c/fields/Counterparty_Name__c.field-meta.xml
<CustomField>
    <fullName>Counterparty_Name__c</fullName>
    <description>Counterparty Name</description>
    <inlineHelpText>Counterparty Name</inlineHelpText>
    <label>Counterparty Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>