force-app/main/default/objects/Transaction_Log__c/fields/Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fee_Amount__c</fullName>
    <description>Fee Amount</description>
    <inlineHelpText>Fee Amount</inlineHelpText>
    <label>Fee Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>