force-app/main/default/objects/Transaction_Log__c/fields/Fee_Amount_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Fee_Amount_Currency_Code__c</fullName>
    <description>Fee Amount Currency Code</description>
    <inlineHelpText>Fee Amount Currency Code</inlineHelpText>
    <label>Fee Amount Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>