force-app/main/default/objects/Transaction_Log__c/fields/Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Amount__c</fullName>
    <description>Gross Amount of the Transaction</description>
    <inlineHelpText>Gross Amount of the Transaction</inlineHelpText>
    <label>Gross Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>