force-app/main/default/objects/Transaction_Log__c/fields/Gross_Amount_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Gross_Amount_Currency_Code__c</fullName>
    <description>Gross Amount Currency Code</description>
    <inlineHelpText>Gross Amount Currency Code</inlineHelpText>
    <label>Gross Amount Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>