force-app/main/default/objects/Transaction_Log__c/fields/Has_Dispute__c.field-meta.xml
<CustomField>
    <fullName>Has_Dispute__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this transaction ever disputed?</description>
    <inlineHelpText>Is this transaction ever disputed?</inlineHelpText>
    <label>Has Dispute</label>
    <type>Checkbox</type>
</CustomField>