force-app/main/default/objects/Transaction_Log__c/fields/Is_Parent__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a parent transaction as per the transaction model?</description>
    <inlineHelpText>Is this a parent transaction as per the transaction model?</inlineHelpText>
    <label>Is Parent</label>
    <type>Checkbox</type>
</CustomField>