force-app/main/default/objects/Transaction_Log__c/fields/Last_4_digits__c.field-meta.xml
<CustomField>
    <fullName>Last_4_digits__c</fullName>
    <description>Last 4 digits of the financial instrument that funded this transaction</description>
    <inlineHelpText>Last 4 digits of the financial instrument that funded this transaction</inlineHelpText>
    <label>Last 4 digits</label>
    <length>16</length>
    <type>Text</type>
</CustomField>