force-app/main/default/objects/Transaction_Log__c/fields/Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount__c</fullName>
    <description>Net Amount</description>
    <inlineHelpText>Net Amount</inlineHelpText>
    <label>Net Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>