force-app/main/default/objects/Transaction_Log__c/fields/Net_Amount_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount_Currency_Code__c</fullName>
    <description>Net Amount Currency Code</description>
    <inlineHelpText>Net Amount Currency Code</inlineHelpText>
    <label>Net Amount Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>