force-app/main/default/objects/Transaction_Log__c/fields/Running_Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Running_Balance_Amount__c</fullName>
    <description>Running Balance Amount</description>
    <inlineHelpText>Running Balance Amount</inlineHelpText>
    <label>Running Balance Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>