force-app/main/default/objects/Transaction_Log__c/fields/Running_Balance_Amount_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Running_Balance_Amount_Currency_Code__c</fullName>
    <description>Running Balance Amount Currency Code</description>
    <inlineHelpText>Running Balance Amount Currency Code</inlineHelpText>
    <label>Running Balance Amount Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>