force-app/main/default/objects/Transaction_Log__c/fields/ToFrom__c.field-meta.xml
<CustomField>
    <fullName>ToFrom__c</fullName>
    <description>Payment To / From Information</description>
    <inlineHelpText>Payment To / From Information</inlineHelpText>
    <label>ToFrom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>