force-app/main/default/objects/Transaction_Log__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>Transaction Id</description>
    <inlineHelpText>Transaction Id</inlineHelpText>
    <label>Transaction Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>