force-app/main/default/objects/Transaction_Log__c/fields/Transaction_Id_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id_Encrypted__c</fullName>
    <description>Encrypted Transaction Id</description>
    <inlineHelpText>Encrypted Transaction Id</inlineHelpText>
    <label>Transaction Id Encrypted</label>
    <length>64</length>
    <type>Text</type>
</CustomField>