force-app/main/default/objects/Transaction_Log__c/fields/Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Status__c</fullName>
    <description>Current Status of the Transaction</description>
    <inlineHelpText>Current Status of the Transaction</inlineHelpText>
    <label>Transaction Status</label>
    <length>128</length>
    <type>Text</type>
</CustomField>