force-app/main/default/objects/Transaction_Log__c/fields/Transaction_Time__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Time__c</fullName>
    <description>Transaction Time</description>
    <inlineHelpText>Transaction Time</inlineHelpText>
    <label>Transaction Time</label>
    <type>DateTime</type>
</CustomField>