force-app/main/default/objects/Transaction_Log__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>Detailed Transaction Type</description>
    <inlineHelpText>Detailed Transaction Type</inlineHelpText>
    <label>Transaction Type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>